--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ input{
     border-radius: 4px;
     border: 2px solid lightgrey;
 }
+input:required{
+    border: 2px solid lightgrey;
+}
 input:invalid{
     border: 2px dashed red;
 }
@@ -99,9 +102,7 @@ input:focus{
     outline: none;
     box-shadow: 1px 1px var(--dark-green);
 }
-input:required{
-    border: 2px solid lightgrey;
-}
+
 .hidden{
     display: none;
 }
@@ -113,6 +114,7 @@ input:required{
     border-radius: 8px;
     padding: 10px 50px;
     margin-bottom: 20px;
+    border: none;
 }
 #submit-text{
     font-size: large;
